--- a/bootstrap学习/gallery.html
+++ b/bootstrap学习/gallery.html
@@ -45,10 +45,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="visit.html">Visit</a>
@@ -59,7 +57,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="party.html">Party</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
@@ -75,7 +73,7 @@
         <div id="contacts">            
         <div style="width: 150px"><h1><p class="text-center text-white">Gallery</p></h1></div>
         </div>
-        <div class="htmleaf-container">
+        <div class="htmleaf-container" style="margin-bottom: 20px">
             <div class="container gallery-container">
     
                 <h1>Vitaland Photo Gallery</h1>
