--- a/bootstrap学习/party.html
+++ b/bootstrap学习/party.html
@@ -39,10 +39,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="visit.html">Visit</a>
@@ -50,7 +48,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="menu.html">Cafe&Menu</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="party.html">Party</a>
                     </li>
                     <li class="nav-item">
