--- a/bootstrap学习/contacts.html
+++ b/bootstrap学习/contacts.html
@@ -54,7 +54,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="gallery.html">Gallery</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="contacts.html">Contacts</a>
                     </li>
                 </ul>
