--- a/bootstrap学习/index.html
+++ b/bootstrap学习/index.html
@@ -17,6 +17,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cute+Font&family=Sriracha&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/commonstyle.css">
+
+    <link rel="stylesheet" href="css/baguetteBox.min.css">
+    <link rel="stylesheet" href="css/gallery-grid.css">
+
     <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <title>Vitaland Kids Cafe</title>
@@ -64,7 +68,120 @@
 
     <!-- Page Content -->
     <div id="article" class="container-fluid">
-        
+        <div id="carousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carousel" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel" data-slide-to="1"></li>
+              <li data-target="#carousel" data-slide-to="2"></li>
+              <li data-target="#carousel" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="images/frozen_2_movie-wallpaper-3440x1440.jpg" class="d-block w-100" alt="..." style="width:100%; height: 400px;">
+              </div>
+              <div class="carousel-item">
+                <img src="images/Heng8.jpeg" class="d-block w-100" alt="..." style="height: 400px;">
+              </div>
+              <div class="carousel-item">
+                <img src="images/Heng12.jpeg" class="d-block w-100" alt="..." style="height: 400px;">
+              </div>
+              <div class="carousel-item">
+                <img src="images/moana_8k-wallpaper-3440x1440.jpg" class="d-block w-100" alt="..." style="height: 400px;">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <div class="htmleaf-container" style="margin-bottom: 20px">
+            <div class="container gallery-container">
+
+                <p class="page-description text-left">
+                <h1>Photo Gallery</h1>
+                </p>
+                <div class="col-sm-12 clearfix">
+                    <div class="col-sm-10" style="float: left;">
+                        <h4 class="page-description text-left col-sm-12" style="font-family: 'Sriracha', cursive;">Enjoy
+                            vitaland everyday</h4>
+                    </div>
+                    <div class="col-sm-2" style="float: left;"><button class="btn1 btn--stripe btn--radius col-sm-12"
+                            onclick="window.location.href = 'gallery.html';">View More</button></div>
+                </div>
+
+                <div class="tz-gallery">
+
+                    <div class="row">
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="images/Heng1.jpg">
+                                <img src="images/Heng1.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="images/Heng2.jpg">
+                                <img src="images/Heng2.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="images/Heng3.jpg">
+                                <img src="images/Heng3.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="images/Heng4.jpg">
+                                <img src="images/Heng4.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="images/Heng5.jpg">
+                                <img src="images/Heng5.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="images/Heng6.jpg">
+                                <img src="images/Heng6.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="images/Heng10.jpg">
+                                <img src="images/Heng10.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="images/Heng11.jpg">
+                                <img src="images/Heng11.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="images/Heng9.jpg">
+                                <img src="images/Heng9.jpg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div id="imgframe" class="col-md-12"
+                            style="text-align: center; margin-top: 20px;font-family: 'Sriracha', cursive;font-size: 25px;">
+                            <th>
+                                <p>We promise and provide:</p>
+                            </th><br>
+                            <button class="btn1 btn--stripe btn--radius col-sm-3" style="margin-right: 30px;">Open 7
+                                Days<p style="font-size: 10px;">Indoors facilities and open 7 days a week.</p></button>
+                            <button class="btn1 btn--stripe btn--radius col-sm-3" style="margin-right: 30px;">Free WiFi
+                                <p style="font-size: 10px;">Enjoy access to free WiFi while the kids play. </p></button>
+                            <button class="btn1 btn--stripe btn--radius col-sm-3">Always Clean<p
+                                    style="font-size: 10px;">We clean our facilities twice a week to make sure hygiene.
+                                </p></button>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
     </div>
 
     <!-- footer -->
@@ -151,6 +268,13 @@
 
     </footer>
     <script type="text/javascript" src="js/wechat_fade.js"></script>
+    <script>
+        var myCarousel = document.querySelector('#myCarousel')
+        var carousel = new bootstrap.Carousel(myCarousel, {
+            interval: 2000,
+            wrap: true
+        })
+    </script>
 </body>
 
 </html>
