--- a/bootstrap学习/party.html
+++ b/bootstrap学习/party.html
@@ -24,14 +24,14 @@
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top border-bottom shadow-md">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top border-bottom shadow-md">
         <div class="container">
             <!-- <a class="navbar-left 1" href="index.html">
                 <img src="images/castle.png" alt="Castle">
             </a> -->
             <a class="navbar-left" href="index.html">
 
-                <img src="images/smallLogo.png" alt="Vitaland Kids Cafe">
+                <img src="images/newLogo.png" alt="Vitaland Kids Cafe">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
