responsive bugs fixed

--- a/bootstrap学习/menu.html
+++ b/bootstrap学习/menu.html
@@ -24,7 +24,7 @@
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top border-bottom shadow-md">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-light border-bottom shadow-md">
         <div class="container">
             <!-- <a class="navbar-left 1" href="index.html">
                 <img src="images/castle.png" alt="Castle">
@@ -68,9 +68,9 @@
         <div style="width: 300px"><h1><p class="text-center text-white">Cafe & Menu</p></h1></div>
         </div>
         <div class="container" style="padding-top: 30px;">
-            <div><h4><p style="text-align:center;font-family: 'Sriracha', cursive; background-color:#fcf9f4;">We offer a variety of food options for all the kids and parents. <br>Please have a look at our extended menu below. Please click below to view our latest menu offerings. </p></h4><br></div>
+            <div id="menupage-description"><h4><p style="text-align:center;font-family: 'Sriracha', cursive; background-color:#fcf9f4;">We offer a variety of food options for all the kids and parents. <br>Please have a look at our extended menu below. Please click below to view our latest menu offerings. </p></h4><br></div>
             
-            <div class="col-md-12" style="text-align: center;">
+            <div id="menupage-button" class="col-md-12" style="text-align: center;">
                 <button class="button col-sm-3" style="font-family: 'Sriracha', cursive;" onclick="ExchangePic(1)">Menu1</button>
                 <button class="button col-sm-3" style="font-family: 'Sriracha', cursive;" onclick="ExchangePic(2)">Menu2</button>
             </div><br><br>
