--- a/bootstrap学习/party.html
+++ b/bootstrap学习/party.html
@@ -24,7 +24,7 @@
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top border-bottom shadow-md">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-light border-bottom shadow-md">
         <div class="container">
             <!-- <a class="navbar-left 1" href="index.html">
                 <img src="images/castle.png" alt="Castle">
