--- a/bootstrap学习/contacts.html
+++ b/bootstrap学习/contacts.html
@@ -27,7 +27,7 @@
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top border-bottom shadow-md">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-light border-bottom shadow-md">
         <div class="container">            
             <a class="navbar-left" href="index.html">
 
