container margin changed, infoboard fixed

--- a/bootstrap学习/contacts.html
+++ b/bootstrap学习/contacts.html
@@ -71,8 +71,8 @@
                 </h1>
             </div>
         </div>
-        <div class="row" style="margin-top:60px; margin-bottom: 60px; margin-left: 40px; margin-right: 40px;">
-            <a class="col-sm-12 col-md-4 infoboard" title="Email:           Vitalandkids@gmail.com" onmouseover="i=0; wave(i)"></a>
+        <div id="infoboard" class="row" style="margin-top:60px; margin-bottom: 60px; margin-left: 40px; margin-right: 40px;">
+            <a class="col-sm-12 col-md-4 infoboard" title="Email: Vitalandkids         @gmail.com" onmouseover="i=0; wave(i)"></a>
             <a class="col-sm-12 col-md-4 infoboard" title="Telephone: 0436292626" onmouseover="i=1; wave(i)"></a>
             <a class="col-sm-12 col-md-4 infoboard"
                 title="Address: Shop26A Rhodes Waterside, 1 Rider Blvd, Rhodes NSW 2138"
