--- a/bootstrap学习/party.html
+++ b/bootstrap学习/party.html
@@ -67,7 +67,7 @@
         <div id="contacts">            
         <div style="width: 150px"><h1><p class="text-center text-white">Party</p></h1></div>
         </div>
-        <div>
+        <div id="party-pics">
             <img class="img-fluid" src="images/vitaparty1.png" alt="">
             <img class="img-fluid" src="images/vitaparty2.png" alt="">
             <img class="img-fluid" src="images/vitaparty3.png" alt="">
