--- a/bootstrap学习/index.html
+++ b/bootstrap学习/index.html
@@ -74,19 +74,23 @@
               <li data-target="#carousel" data-slide-to="1"></li>
               <li data-target="#carousel" data-slide-to="2"></li>
               <li data-target="#carousel" data-slide-to="3"></li>
+              <li data-target="#carousel" data-slide-to="4"></li>
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/frozen_2_movie-wallpaper-3440x1440.jpg" class="d-block w-100" alt="..." style="width:100%; height: 400px;">
+                <img src="images/3221610325923_.pic_hd.jpg" class="d-block w-100" alt="..." style="width:100%; height: 450px;">
               </div>
               <div class="carousel-item">
-                <img src="images/Heng8.jpeg" class="d-block w-100" alt="..." style="height: 400px;">
+                <img src="images/Heng8.jpeg" class="d-block w-100" alt="..." style="height: 450px;">
               </div>
               <div class="carousel-item">
-                <img src="images/Heng12.jpeg" class="d-block w-100" alt="..." style="height: 400px;">
+                <img src="images/Heng12.jpeg" class="d-block w-100" alt="..." style="height: 450px;">
               </div>
               <div class="carousel-item">
-                <img src="images/moana_8k-wallpaper-3440x1440.jpg" class="d-block w-100" alt="..." style="height: 400px;">
+                <img src="images/3231610325924_.pic_hd.jpg" class="d-block w-100" alt="..." style="height: 450px;">
+              </div>
+              <div class="carousel-item">
+                <img src="images/Heng9.jpg" class="d-block w-100" alt="..." style="height: 400px;">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
