--- a/bootstrap学习/index.html
+++ b/bootstrap学习/index.html
@@ -70,122 +70,153 @@
     <div id="article" class="container-fluid">
         <div id="carousel" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
-              <li data-target="#carousel" data-slide-to="0" class="active"></li>
-              <li data-target="#carousel" data-slide-to="1"></li>
-              <li data-target="#carousel" data-slide-to="2"></li>
-              <li data-target="#carousel" data-slide-to="3"></li>
-              <li data-target="#carousel" data-slide-to="4"></li>
+                <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel" data-slide-to="1"></li>
+                <li data-target="#carousel" data-slide-to="2"></li>
+                <li data-target="#carousel" data-slide-to="3"></li>
+                <li data-target="#carousel" data-slide-to="4"></li>
             </ol>
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="images/3221610325923_.pic_hd.jpg" class="d-block w-100" alt="..." style="width:100%; height: 450px;">
-              </div>
-              <div class="carousel-item">
-                <img src="images/Heng8.jpeg" class="d-block w-100" alt="..." style="height: 450px;">
-              </div>
-              <div class="carousel-item">
-                <img src="images/Heng12.jpeg" class="d-block w-100" alt="..." style="height: 450px;">
-              </div>
-              <div class="carousel-item">
-                <img src="images/3231610325924_.pic_hd.jpg" class="d-block w-100" alt="..." style="height: 450px;">
-              </div>
-              <div class="carousel-item">
-                <img src="images/Heng9.jpg" class="d-block w-100" alt="..." style="height: 400px;">
-              </div>
+                <div class="carousel-item active">
+                    <img src="images/3221610325923_.pic_hd.jpg" class="d-block w-100" alt="..." style="height: 500px;">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/Heng8.jpeg" class="d-block w-100" alt="..." style="height: 500px;">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/Heng12.jpeg" class="d-block w-100" alt="..." style="height: 500px;">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/3231610325924_.pic_hd.jpg" class="d-block w-100" alt="..." style="height: 500px;">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/Heng9.jpg" class="d-block w-100" alt="..." style="height: 500px;">
+                </div>
             </div>
             <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
             </a>
             <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
             </a>
         </div>
-        <div class="htmleaf-container" style="margin-bottom: 20px">
-            <div class="container gallery-container">
-
-                <p class="page-description text-left">
-                <h1>Photo Gallery</h1>
-                </p>
-                <div class="col-sm-12 clearfix">
-                    <div class="col-sm-10" style="float: left;">
-                        <h4 class="page-description text-left col-sm-12" style="font-family: 'Sriracha', cursive;">Enjoy
-                            vitaland everyday</h4>
+        <div><img class="img-fluid" src="images/train.png" alt="" style="width: 100%;margin-bottom: 4px;"></div>
+        <div class="container">
+            <div id="card-group" class="row">
+                <div class="card bg-light col-lg-4  col-md-4 col-sm-12">
+                    <img src="images/House.png" class="card-img-top" alt="...">
+                    <div class="card-body" style="text-align: center;">
+                        <h5 class="card-title text-center">Play Areas</h5>
+                        <p class="card-text text-center">Children can explore and play at their own leisure.</p>
+                        <a href="visit.html" class="card link border-0">Find more</a>
                     </div>
-                    <div class="col-sm-2" style="float: left;"><button class="btn1 btn--stripe btn--radius col-sm-12"
-                            onclick="window.location.href = 'gallery.html';">View More</button></div>
                 </div>
-
-                <div class="tz-gallery">
-
-                    <div class="row">
-                        <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="images/Heng1.jpg">
-                                <img src="images/Heng1.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="images/Heng2.jpg">
-                                <img src="images/Heng2.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="col-sm-12 col-md-4">
-                            <a class="lightbox" href="images/Heng3.jpg">
-                                <img src="images/Heng3.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="images/Heng4.jpg">
-                                <img src="images/Heng4.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="images/Heng5.jpg">
-                                <img src="images/Heng5.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="images/Heng6.jpg">
-                                <img src="images/Heng6.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="images/Heng10.jpg">
-                                <img src="images/Heng10.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="images/Heng11.jpg">
-                                <img src="images/Heng11.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="images/Heng9.jpg">
-                                <img src="images/Heng9.jpg" alt="">
-                            </a>
-                        </div>
+                <div class="card col-lg-4  col-md-4 col-sm-12">
+                    <img src="images/castle1.png" class="card-img-top" alt="...">
+                    <div class="card-body" style="text-align: center;">
+                        <h5 class="card-title text-center">Cafe & Food</h5>
+                        <p class="card-text text-center">We have a variety of food and beverages at our cafe.</p>
+                        <a href="menu.html" class="card link border-0">Find more</a>
                     </div>
-                    <div class="row">
-                        <div id="imgframe" class="col-md-12"
-                            style="text-align: center; margin-top: 20px;font-family: 'Sriracha', cursive;font-size: 25px;">
-                            <th>
-                                <p>We promise and provide:</p>
-                            </th><br>
-                            <button class="btn1 btn--stripe btn--radius col-sm-3" style="margin-right: 30px;">Open 7
-                                Days<p style="font-size: 10px;">Indoors facilities and open 7 days a week.</p></button>
-                            <button class="btn1 btn--stripe btn--radius col-sm-3" style="margin-right: 30px;">Free WiFi
-                                <p style="font-size: 10px;">Enjoy access to free WiFi while the kids play. </p></button>
-                            <button class="btn1 btn--stripe btn--radius col-sm-3">Always Clean<p
-                                    style="font-size: 10px;">We clean our facilities twice a week to make sure hygiene.
-                                </p></button>
-                        </div>
+                </div>
+                <div class="card col-lg-4  col-md-4 col-sm-12">
+                    <img src="images/cake.png" class="card-img-top" alt="...">
+                    <div class="card-body" style="text-align: center;">
+                        <h5 class="card-title text-center">Parties</h5>
+                        <p class="card-text text-center">Host small intimate parties or hire out the whole venue. </p>
+                        <a href="party.html" class="card link border-0">Find more</a>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="htmleaf-container" style="margin-bottom: 20px">
+        <div class="container gallery-container">
 
+            <p class="page-description text-left">
+            <h1>Photo Gallery</h1>
+            </p>
+            <div class="col-sm-12 clearfix">
+                <div class="col-sm-10" style="float: left;">
+                    <h4 class="page-description text-left col-sm-12" style="font-family: 'Sriracha', cursive;">Enjoy
+                        vitaland everyday</h4>
+                </div>
+                <div class="col-sm-2" style="float: left;"><button class="btn1 btn--stripe btn--radius col-sm-12"
+                        onclick="window.location.href = 'gallery.html';">View More</button></div>
+            </div>
+
+            <div class="tz-gallery">
+
+                <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="images/Heng1.jpg">
+                            <img src="images/Heng1.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="images/Heng2.jpg">
+                            <img src="images/Heng2.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-sm-12 col-md-4">
+                        <a class="lightbox" href="images/Heng3.jpg">
+                            <img src="images/Heng3.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="images/Heng4.jpg">
+                            <img src="images/Heng4.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="images/Heng5.jpg">
+                            <img src="images/Heng5.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="images/Heng6.jpg">
+                            <img src="images/Heng6.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="images/Heng10.jpg">
+                            <img src="images/Heng10.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="images/Heng11.jpg">
+                            <img src="images/Heng11.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="images/Heng9.jpg">
+                            <img src="images/Heng9.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div id="imgframe" class="col-md-12"
+                        style="text-align: center; margin-top: 20px;font-family: 'Sriracha', cursive;font-size: 25px;">
+                        <th>
+                            <p>We promise and provide:</p>
+                        </th><br>
+                        <button class="btn1 btn--stripe btn--radius col-sm-3" style="margin-right: 30px;">Open 7
+                            Days<p style="font-size: 10px;">Indoors facilities and open 7 days a week.</p></button>
+                        <button class="btn1 btn--stripe btn--radius col-sm-3" style="margin-right: 30px;">Free WiFi
+                            <p style="font-size: 10px;">Enjoy access to free WiFi while the kids play. </p>
+                        </button>
+                        <button class="btn1 btn--stripe btn--radius col-sm-3">Always Clean<p style="font-size: 10px;">We
+                                clean our facilities twice a week to make sure hygiene.
+                            </p></button>
+                    </div>
                 </div>
 
             </div>
+
         </div>
+    </div>
     </div>
 
     <!-- footer -->
