js update for home page

--- a/bootstrap学习/index.html
+++ b/bootstrap学习/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="css/baguetteBox.min.css">
     <link rel="stylesheet" href="css/gallery-grid.css">
 
+    <script src="js/baguetteBox.min.js"></script>
+
     <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <title>Vitaland Kids Cafe</title>
@@ -309,6 +311,9 @@
             interval: 2000,
             wrap: true
         })
+    </script>
+    <script>
+        baguetteBox.run('.tz-gallery');
     </script>
 </body>
 
