--- a/bootstrap学习/contacts.html
+++ b/bootstrap学习/contacts.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/baguetteBox.min.css">
     <link rel="stylesheet" href="css/gallery-grid.css">
     <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
-    
+    <link rel="shortcut icon" type="image/x-icon" href="images/castle.png">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <title>Vitaland Kids Cafe</title>
 </head>
