--- a/bootstrap学习/menu.html
+++ b/bootstrap学习/menu.html
@@ -17,6 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cute+Font&family=Sriracha&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/commonstyle.css">
+    <link rel="shortcut icon" type="image/x-icon" href="images/castle.png">
     <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <title>Vitaland Kids Cafe</title>
