--- a/bootstrap学习/gallery.html
+++ b/bootstrap学习/gallery.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/gallery-grid.css">
     
     <script src="js/baguetteBox.min.js"></script>
-
+    <link rel="shortcut icon" type="image/x-icon" href="images/castle.png">
     <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <title>Vitaland Kids Cafe</title>
