animation and memership index added

--- a/bootstrap学习/gallery.html
+++ b/bootstrap学习/gallery.html
@@ -32,10 +32,10 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-light border-bottom shadow-md">
         <div class="container">
-            <!-- <a class="navbar-left 1" href="index.html">
+            <!-- <a class="navbar-left 1" href="home.html">
                 <img src="images/castle.png" alt="Castle">
             </a> -->
-            <a class="navbar-left" href="index.html">
+            <a class="navbar-left" href="home.html">
 
                 <img src="images/newLogo.png" alt="Vitaland Kids Cafe">
             </a>
