--- a/bootstrap学习/contacts.html
+++ b/bootstrap学习/contacts.html
@@ -29,7 +29,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-light border-bottom shadow-md">
         <div class="container">            
-            <a class="navbar-left" href="index.html">
+            <a class="navbar-left" href="home.html">
                 <img src="images/newLogo.png" alt="Vitaland Kids Cafe">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="home.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="visit.html">Visit</a>
@@ -84,10 +84,10 @@
                     <th><h1 style="text-align:center;font-family: 'Sriracha', cursive;">Send Enqueries</h1></th>
                     <br><p style="text-align:center;font-family: 'Sriracha', cursive;">Have some suggestions or just want to say hi? Contact us via email:</p>
                     <div class="col-md-12">
-                    <input type="text" class="form-control" id="Name" placeholder="Your Name *" ><br>
+                    <input type="text" class="form-control" id="Name" placeholder="Your Name *" required><br>
                     </div>
                     <div class="col-md-12">                    
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your Email *"><br>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your Email *" required><br>
                     </div>
                     <div class="col-md-12">                    
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="6" placeholder="Messege"></textarea>
