index page css style adjusted

--- a/bootstrap学习/index.html
+++ b/bootstrap学习/index.html
@@ -74,10 +74,11 @@
     <div class="container-fluid" style="padding: 0;">
         <div id="index" class="container">
             <div class="navbar"><img src="images/newLogo.png" alt="" style="height: 45px;"></div>
-            <div id="story" style="margin-bottom: 20px; text-align: center;">
+            <div class="row">
+            <div id="story" class="col-lg-12" style="margin-bottom: 20px; text-align: center;">
                 <h4>Brand story</h4>
                 <p>Vitaland is a sdjks kjdks dousoikslkjdja jkskdiodsdnklldksl</p>
-            </div>
+            </div></div>
             <div class="row">
                 <div class="col-lg-6 col-sm-12"><input class="form-control" type="search"
                         placeholder="search our branches" style="width:100%;border-radius: 3px;margin-bottom: 5px;">
@@ -90,7 +91,7 @@
                         Our Branches
                     </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="home.html">Rhodes</a>
+                        <a class="dropdown-item" href="home.html"><strong>Rhodes</strong></a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item disabled" href="#">Miranda (coming soon...)</a>
                         <a class="dropdown-item disabled" href="#">Burwood (coming soon...)</a>
@@ -98,12 +99,12 @@
                     </div>
                 </div>
             </div>
-            <div id="membership">
-                <div class="col-lg-5 col-sm-12">
+            <div id="membership" class="row">
+                <div class="col-lg-5 col-sm-12" >
                     <img src="https://glueup.com/storage/app/uploads/public/5f2/333/c07/5f2333c07df10013921196.png"
                         alt="" width="90%">
                 </div>
-                <div class="col-lg-7 col-sm-12">
+                <div class="col-lg-7 col-sm-12" >
                     <table class="table">
                         <caption>List of Membership</caption>
                         <thead>
