--- a/bootstrap学习/index.html
+++ b/bootstrap学习/index.html
@@ -73,7 +73,11 @@
 
     <div class="container-fluid" style="padding: 0;">
         <div id="index" class="container">
-            <div class="navbar"><img src="images/newLogo.png" alt="" style="height: 45px;"></div>
+            <div class="navbar">
+                <img src="images/newLogo.png" alt="" style="height: 45px;">
+                <a href="" style="font-size: 20px;"><strong>Franchise</strong></a>
+            </div>
+            
             <div class="row">
             <div id="story" class="col-lg-12" style="margin-bottom: 20px; text-align: center;">
                 <h4>Brand story</h4>
