--- a/bootstrap学习/home.html
+++ b/bootstrap学习/home.html
@@ -101,11 +101,11 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-        <div><img class="img-fluid" src="images/train.png" alt="" style="width: 100%;margin-bottom: 4px;"></div>
+        <div><img class="img-fluid" src="images/train.png" alt="" style="width: 100%;margin-bottom: 2px;"></div>
         <div class="container">
             <div id="card-group" class="row">
                 <div class="card bg-light col-lg-4  col-md-4 col-sm-12">
-                    <img src="images/House.png" class="card-img-top" alt="...">
+                    <img src="images/House.png" class="card-img-top" alt="..." style="width: 65%; margin: auto;">
                     <div class="card-body" style="text-align: center;">
                         <h5 class="card-title text-center">Play Areas</h5>
                         <p class="card-text text-center">Children can explore and play at their own leisure.</p>
