--- a/bootstrap学习/index.html
+++ b/bootstrap学习/index.html
@@ -71,7 +71,7 @@
     </div>
     <!-- preloader end -->
 
-    <div class="container-fluid" style="padding: 0;">
+    <!-- <div class="container-fluid" style="padding: 0;">
         <div id="index" class="container">
             <div class="navbar">
                 <img src="images/newLogo.png" alt="" style="height: 45px;">
@@ -149,7 +149,7 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
 
     </div>
     <script type="text/javascript" src="js/jquery-3.5.0.min.js"></script>
