--- a/bootstrap学习/home.html
+++ b/bootstrap学习/home.html
@@ -72,8 +72,7 @@
                 <li data-target="#carousel" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel" data-slide-to="1"></li>
                 <li data-target="#carousel" data-slide-to="2"></li>
-                <li data-target="#carousel" data-slide-to="3"></li>
-                <li data-target="#carousel" data-slide-to="4"></li>
+                <li data-target="#carousel" data-slide-to="3"></li>                
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -88,9 +87,6 @@
                 <div class="carousel-item">
                     <img src="images/fuben4.jpeg" class="d-block w-100" alt="..." style="height: 500px;">
                 </div>
-                <div class="carousel-item">
-                    <img src="images/fuben3.jpg" class="d-block w-100" alt="..." style="height: 500px;">
-                </div>
             </div>
             <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -101,34 +97,11 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-        <div><img class="img-fluid" src="images/train.png" alt="" style="width: 100%;margin-bottom: 2px;"></div>
-        <div class="container">
-            <div id="card-group" class="row">
-                <div class="card bg-light col-lg-4  col-md-4 col-sm-12">
-                    <img src="images/House.png" class="card-img-top" alt="..." style="width: 65%; margin: auto;">
-                    <div class="card-body" style="text-align: center;">
-                        <h5 class="card-title text-center">Play Areas</h5>
-                        <p class="card-text text-center">Children can explore and play at their own leisure.</p>
-                        <a href="visit.html" class="card link border-0">Find more</a>
-                    </div>
-                </div>
-                <div class="card col-lg-4  col-md-4 col-sm-12">
-                    <img src="images/castle1.png" class="card-img-top" alt="...">
-                    <div class="card-body" style="text-align: center;">
-                        <h5 class="card-title text-center">Cafe & Food</h5>
-                        <p class="card-text text-center">We have a variety of food and beverages at our cafe.</p>
-                        <a href="menu.html" class="card link border-0">Find more</a>
-                    </div>
-                </div>
-                <div class="card col-lg-4  col-md-4 col-sm-12">
-                    <img src="images/cake.png" class="card-img-top" alt="...">
-                    <div class="card-body" style="text-align: center;">
-                        <h5 class="card-title text-center">Parties</h5>
-                        <p class="card-text text-center">Host small intimate parties or hire out the whole venue. </p>
-                        <a href="party.html" class="card link border-0">Find more</a>
-                    </div>
-                </div>
-            </div>
+        <div class="row">
+            <div class="col-lg-4 col-sm-4"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div>
+            <div class="col-lg-4 col-sm-4"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div>
+            <div class="col-lg-4 col-sm-4"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div>
+            <!-- <div class="col-lg-3 col-sm-3"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div> -->
         </div>
     </div>
     <div class="htmleaf-container" style="margin-bottom: 20px">
