background image updated for other pages

--- a/bootstrap学习/party.html
+++ b/bootstrap学习/party.html
@@ -65,8 +65,8 @@
 
     <!-- Page Content -->
     <div class="container-fluid">
-        <div id="contacts">            
-        <div style="width: 150px"><h1><p class="text-center text-white">Party</p></h1></div>
+        <div id="contacts" style="background-image: url('../bootstrap学习/images/JBXeLDrV9x.jpg'); background-position: bottom center;">            
+        <div style="width: 150px"><h1><p class="text-center">Party</p></h1></div>
         </div>
         <div id="party-pics">
             <img class="img-fluid" src="images/vitaparty1.png" alt="">
