--- a/bootstrap学习/home.html
+++ b/bootstrap学习/home.html
@@ -98,9 +98,9 @@
             </a>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-sm-4"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div>
-            <div class="col-lg-4 col-sm-4"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div>
-            <div class="col-lg-4 col-sm-4"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div>
+            <div class="col-lg-4 col-xs-4"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div>
+            <div class="col-lg-4 col-xs-4"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div>
+            <div class="col-lg-4 col-xs-4"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div>
             <!-- <div class="col-lg-3 col-sm-3"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div> -->
         </div>
     </div>
