home page picture animation added

--- a/bootstrap学习/home.html
+++ b/bootstrap学习/home.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cute+Font&family=Sriracha&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/commonstyle.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/commonstyle.css">    
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="css/baguetteBox.min.css">
     <link rel="stylesheet" href="css/gallery-grid.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/castle.png">
@@ -178,12 +178,61 @@
                 </div>
             </div>
             <div class="clearfix"></div>
-            <p class="page-description text-left">
-            <h2>Photo Gallery</h2>
-            </p>
+            <h2 style="margin-top: 38px;">What We Offer</h2>
+            <p style="margin-bottom: 26px;">Vitaland Kids Cafe’s mission is to provide hours of indoor fun with a variety of rooms to explore and play.</p>
+            <div id="circle-around">
+                <div class="banner"></div>
+                <div class="row" style="box-sizing: border-box;">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div id="list-around1">
+                            <h4>Dress Up</h4>
+                            <div class="overlay">
+                                <div class="overlay-text">Doctors to Princesses. A variety of costumes to play dress up.</div>
+                            </div>
+                        </div>
+                        <div id="list-around2">
+                            <h4>Birthday Party</h4>
+                            <div class="overlay">
+                                <div class="overlay-text">We have options to host your children's next birthday party.</div>
+                            </div>
+                        </div>
+                        <div id="list-around3">
+                            <h4>interactive</h4>
+                            <div class="overlay">
+                                <div class="overlay-text">Technology meets ball pit fun.</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 kids8">
+                        <img src="images/center.png" alt="" style="object-fit: contain; width: 90%; margin:10px 20px">
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div id="list-around3">
+                            <h4>Cafe</h4>
+                            <div class="overlay">
+                                <div class="overlay-text">Coffee, cakes, hot food & snacks.</div>
+                            </div>
+                        </div>
+                        <div id="list-around4">
+                            <h4>Ball Pit</h4>
+                            <div class="overlay">
+                                <div class="overlay-text">Our ball pit includes a gaming screen.</div>
+                            </div>
+                        </div>
+                        <div id="list-around4">
+                            <h4>Activity Room</h4>
+                            <div class="overlay">
+                                <div class="overlay-text">Grocery Store, Kitchen, Tea Party, Dress Up, Lego & more.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="banner"></div>
+            </div>
+            <h2 style="margin-top: 38px;">Photo Gallery</h2>            
             <div class="col-sm-12 clearfix">
                 <div class="col-sm-10" style="float: left;">
-                    <h4 class="page-description text-left col-sm-12">Enjoy vitaland everyday</h4>
+                    <h5 class="text-left col-sm-12">Enjoy vitaland everyday</h5>
                 </div>
                 <div class="col-sm-2" style="float: left;"><button class="btn1 btn--stripe btn--radius col-sm-12"
                         onclick="window.location.href = 'gallery.html';">View More</button></div>
@@ -240,18 +289,18 @@
                 </div>
                 <div class="row">
                     <div id="imgframe" class="col-md-12"
-                        style="text-align: center; margin-top: 20px;font-family: 'Sriracha', cursive;font-size: 25px;">
+                        style="text-align: center; margin-top: 20px;font-family: 'Nunito', sans-serif;font-size: 25px;">
                         <th>
-                            <p>We promise and provide:</p>
+                            <h2>We promise and provide:</h2>
                         </th><br>
                         <button class="btn1 btn--stripe btn--radius col-sm-3" style="margin-right: 30px;">Open 7
-                            Days<p style="font-size: 10px;">Indoors facilities and open 7 days a week.</p></button>
+                            Days<p style="font-size: 16px;">Indoors facilities and open 7 days a week.</p></button>
                         <button class="btn1 btn--stripe btn--radius col-sm-3" style="margin-right: 30px;">Free WiFi
-                            <p style="font-size: 10px;">Enjoy access to free WiFi while the kids play. </p>
+                            <p style="font-size: 16px;">Enjoy access to free WiFi while the kids play. </p>
                         </button>
-                        <button class="btn1 btn--stripe btn--radius col-sm-3">Always Clean<p style="font-size: 10px;">We
+                        <button class="btn1 btn--stripe btn--radius col-sm-3">Always Clean<p style="font-size: 16px;">We
                                 clean our facilities twice a week to make sure hygiene.
-                            </p></button>
+                        </p></button>
                     </div>
                 </div>
 
