--- a/bootstrap学习/home.html
+++ b/bootstrap学习/home.html
@@ -130,14 +130,7 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-        <div class="row">
-            <div class="col-lg-4 col-xs-4"><img class="img-fluid" src="images/train.png" alt="" style="height:20px;">
-            </div>
-            <div class="col-lg-4 col-xs-4"><img class="img-fluid" src="images/train.png" alt="" style="height:20px;">
-            </div>
-            <div class="col-lg-4 col-xs-4"><img class="img-fluid" src="images/train.png" alt="" style="height:20px;">
-            </div>
-            <!-- <div class="col-lg-3 col-sm-3"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div> -->
+        <div class="row" style="height:16px; background-image: url('images/baiyunfengexian.png');background-size: contain;"></div>    
         </div>
     </div>
     <div class="htmleaf-container" style="margin-bottom: 20px">
