--- a/bootstrap学习/home.html
+++ b/bootstrap学习/home.html
@@ -135,7 +135,7 @@
     </div>
     <div class="htmleaf-container" style="margin-bottom: 20px">
         <div class="container gallery-container">
-            <h1>Vitaland</h1>
+            <div style="margin-left: auto;margin-right: auto;"><h1 style="display: inline-block;">Vitaland</h1></div>
             <h2>Kids Cafe</h2>
             <div class="responsive">
                 <div class="gallery">
