email php added

--- a/bootstrap学习/contacts.html
+++ b/bootstrap学习/contacts.html
@@ -79,18 +79,18 @@
         </div>
         <div class="container gallery-container" style="margin-bottom: 20px;justify-content:center; background-color:#fcf9f4;">
             <div class="col-sm-12">
-                <form class="col-lg-12">
+                <form class="col-lg-12" method="POST" action="email.php">
                     <br><br>
                     <th><h1 style="text-align:center;font-family: 'Sriracha', cursive;">Send Enqueries</h1></th>
                     <br><p style="text-align:center;font-family: 'Sriracha', cursive;">Have some suggestions or just want to say hi? Contact us via email:</p>
                     <div class="col-md-12">
-                    <input type="text" class="form-control" id="Name" placeholder="Your Name *" required><br>
+                    <input type="text" class="form-control" name="Name" placeholder="Your Name *" required><br>
                     </div>
                     <div class="col-md-12">                    
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your Email *" required><br>
+                    <input type="email" class="form-control" name="Email" aria-describedby="emailHelp" placeholder="Your Email *" required><br>
                     </div>
                     <div class="col-md-12">                    
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="6" placeholder="Messege"></textarea>
+                    <textarea class="form-control" name="Textcontent" rows="6" placeholder="Messege"></textarea>
                     </div>
                     <br>
                     <div style="text-align: center;">
