setInterval back to contacts after sent email

--- a/bootstrap学习/test.html
+++ b/bootstrap学习/test.html
@@ -10,25 +10,11 @@
             text-align: center;
         }
     </style>
-    <title>Email</title>
+    <title>Document</title>
 </head>
 <body>
-    <p class="email">Thanks for your enqueries, we received it and our staff will reply to you soon...<p>
+    <p class="email">Thanks for your enqueries, we received it and our staff will reply to you soon...<p><br>
     <p id="timer" class="email"></p>
-    <?php 
-        $name = $_POST['Name']; 
-        $email = $_POST['Email'];
-        $content = $_POST['Textcontent'];
-        $to = "12796746@student.uts.edu.au";
-        $subject = "Party enquiries";
-        $message = "Hi Manager! \n\nDear customer $name has some enquiries about our party package, please reply ASAP \n\n";
-        $message .= "Details are as follow:\n\nCustomer email address: $email\n ";
-        $message .= "$content";
-        $header = "From: Customer \r\n";
-        $header .= "MIME-Version: 1.0\r\n";
-        $header .= "Content-type: text/html \r\n";
-        mail($to,$subject,$message,$headers);
-    ?>
     <script>
         const timer = document.getElementById('timer');
         var a = 4;
@@ -45,6 +31,7 @@
             }, 1000);
         }
         count(a);
+        
     </script>
 </body>
 </html>
